# lightsei

./: .env.example  .gitignore  MEMORY.md  README.md  STRIPE_SETUP.md  TASKS.md  docker-compose.yml
backend/: agent_generator.py  apns.py  apple_signin.py  ask.py  assistant_identity.py  auth.py  behavioral_rules.py  billing_gate.py  builtin_personas.py  capabilities.py  cost.py  cost_insights.py  design.py  email_provider.py  end_user_auth.py  eval_runner.py  eval_sampler.py  feed.py  feeder.py  framework_detect.py  github_api.py  github_oauth.py  github_publish.py  google_oauth.py  jobs.py  limits.py  main.py  models.py  onboarding.py  pricing.py  push.py  quality_signal.py  react_router_wiring.py  requirements.txt  scheduled_run.py  scheduler.py  secrets_crypto.py  seo_autopublish.py  seo_generate.py  seo_render.py  (+16 more)
sdk/: pyproject.toml
sdk/lightsei/: __init__.py  _capabilities.py  _chat.py  _cli.py  _client.py  _commands.py  _connectors.py  _context.py  _cost_insights.py  _end_user.py  _instance.py  _quality_signal.py  _redaction.py  _secrets.py  _trigger.py  errors.py
sdk/lightsei/connectors/: __init__.py  gmail.py  google_calendar.py  google_drive.py
sdk/lightsei/integrations/: _runscope.py  anthropic_patch.py  gemini_patch.py  httpx_patch.py  openai_patch.py
sdk/tests/: test_basic.py  test_capability_gate.py  test_cli.py  test_commands_dispatch.py  test_connectors.py  test_cross_zone_gate.py  test_end_user_accessor.py  test_gemini_patch.py  test_redaction.py  test_team_chat_poll.py  test_trigger.py  test_widget_chat.py  test_widget_chat_bridge.py
(+419 files in other folders)
